prevent datepicker pane from being cut off by the viewport

--- a/src/irb-app/irb-builder/builder-time/index.styl
+++ b/src/irb-app/irb-builder/builder-time/index.styl
@@ -17,3 +17,7 @@
     left 49px
     position absolute
     top -40px
+
+  &.align-custom-pane-right mp-drop-menu
+    left initial
+    right 0
